fix numbering on smaller devices

--- a/style.css
+++ b/style.css
@@ -26,5 +26,5 @@ footer {
 .canv {
     background-color: black;
     width: 100%;
-    height: 67%;
+    height: 33vw;
 }
